<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlightPlanner</string>
    <string name="start">Enter Username and Password:</string>
    <string name="username"> E-mail:</string>
    <string name="pass"> Password:</string>
    <string name="logout">Logout</string>
    <string name="Login">ENTER</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display">Welcome Back!</string>
    <string name="searchFlight">Search Flights</string>
    <string name="searchItin">Search Itineraries</string>
    <string name="viewBooking">Booked Flights</string>
    <string name="viewInfo">Personal Information</string>
    <string name="title_activity_search_flight">SearchFlight</string>
    <string name="Date"> Date (yyyy-mm-dd)</string>
    <string name="Origin">Origin</string>
    <string name="Destination">Destination</string>
    <string name="infor"></string>
    <string name="first"></string>
    <string name="email"></string>
    <string name="address"></string>
    <string name="card"></string>
    <string name="expiry"></string>
    <string name="sort">Select Filter:</string>
    <string name="originflight"></string>
    <string name="destflight"></string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_personal">Personal and Billing</string>
    <string name="title_activity_view_flights">Search Results</string>
    <string name="displayFlight"></string>
    <string name="title_activity_view_bookings">View Bookings</string>
    <string name="insertClient">Submit Changes</string>

    <string-array name="CostTime">
        <item>Regular</item>
        <item>Time</item>
        <item>Cost</item>
    </string-array>

    <string name="title_activity_upload_client">Upload Client</string>
    <string name="uploadClient">Add a Client to the system:</string>
    <string name="upload">Upload</string>
    <string name="title_activity_upload_flight">Upload Flight</string>
    <string name="uploadFlight">Add a Flight to the system:</string>
    <string name="title_activity_choose_client">ChooseClient</string>
    <string name="chooseclient">Enter the Clients E-mail:</string>
    <string name="title_activity_choose_flight">ChooseFlight</string>
    <string name="chooseflight">Enter the Flight Number:</string>
    <string name="title_activity_edit_flight">EditFlight</string>
    <string name="title_activity_select_flight">SelectFlight</string>
    <string name="hello_world">Hello world!</string>

</resources>