<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginTop="66dp"
        android:layout_toLeftOf="@+id/message"
        android:src="@drawable/pass" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/message"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_alignTop="@+id/user"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/username"
        android:singleLine="true" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:onClick="EnterLogin" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UserName"
        android:layout_alignRight="@+id/UserName"
        android:layout_alignTop="@+id/pass"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>